// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sources-tree addToTree can add a file to an intermediate directory 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - unpkg.com path=FakeThread/unpkg.com 
      - codemirror@5.1 path=FakeThread/unpkg.com/codemirror@5.1 
        - mode path=FakeThread/unpkg.com/codemirror@5.1/mode 
          - xml path=FakeThread/unpkg.com/codemirror@5.1/mode/xml 
            - xml.js path=FakeThread/unpkg.com/codemirror@5.1/mode/xml/xml.js source_id=server1.conn13.child1/39 
      - codemirror@5.1 path=FakeThread/unpkg.com/codemirror@5.1 source_id=server1.conn13.child1/37 
"
`;

exports[`sources-tree addToTree correctly parses file sources 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - file:// path=FakeThread/file:// 
      - a path=FakeThread/file:///a 
        - b.js path=FakeThread/file:///a/b.js source_id=actor1 
"
`;

exports[`sources-tree addToTree does not attempt to add two of the same directory 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - davidwalsh.name path=FakeThread/davidwalsh.name 
      - (index) path=https://davidwalsh.name/ source_id=server1.conn13.child1/37 
      - wp-content path=FakeThread/davidwalsh.name/wp-content 
        - prism.js path=FakeThread/davidwalsh.name/wp-content/prism.js source_id=server1.conn13.child1/39 
"
`;

exports[`sources-tree addToTree does not attempt to add two of the same file 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - davidwalsh.name path=FakeThread/davidwalsh.name 
      - (index) path=https://davidwalsh.name/ source_id=server1.conn13.child1/39 
      - util.js path=FakeThread/davidwalsh.name/util.js source_id=server1.conn13.child1/37 
  - FakeThread2 path=FakeThread2 
    - davidwalsh.name path=FakeThread2/davidwalsh.name 
      - util.js path=FakeThread2/davidwalsh.name/util.js source_id=server1.conn13.child1/37 
"
`;

exports[`sources-tree addToTree does not mangle encoded URLs 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - example.com path=FakeThread/example.com 
      - foo path=FakeThread/example.com/foo 
        - B9724220.131821496;dc_ver=42.111;sz=468x60;u_sd=2;dc_adk=2020465299;ord=a53rpc;dc_rfl=1,https%3A%2F%2Fdavidwalsh.name%2F$0;xdt=1 path=FakeThread/example.com/foo/B9724220.131821496;dc_ver=42.111;sz=468x60;u_sd=2;dc_adk=2020465299;ord=a53rpc;dc_rfl=1,https%3A%2F%2Fdavidwalsh.name%2F$0;xdt=1 source_id=actor1 
"
`;

exports[`sources-tree addToTree excludes javascript: URLs from the tree 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - example.com path=FakeThread/example.com 
      - source1.js path=FakeThread/example.com/source1.js source_id=actor2 
"
`;

exports[`sources-tree addToTree name does not include query params 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - example.com path=FakeThread/example.com 
      - foo path=FakeThread/example.com/foo 
        - name.js path=FakeThread/example.com/foo/name.js source_id=actor1 
"
`;

exports[`sources-tree addToTree replaces a file with a directory 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - unpkg.com path=FakeThread/unpkg.com 
      - codemirror@5.1 path=FakeThread/unpkg.com/codemirror@5.1 
        - mode path=FakeThread/unpkg.com/codemirror@5.1/mode 
          - xml path=FakeThread/unpkg.com/codemirror@5.1/mode/xml 
            - xml.js path=FakeThread/unpkg.com/codemirror@5.1/mode/xml/xml.js source_id=server1.conn13.child1/39 
      - codemirror@5.1 path=FakeThread/unpkg.com/codemirror@5.1 source_id=server1.conn13.child1/37 
"
`;

exports[`sources-tree addToTree supports data URLs 1`] = `
" - root path= 
  - FakeThread path=FakeThread 
    - (no domain) path=FakeThread/(no domain) 
      - data:text/html,<script>console.log(123)</script> path=data:text/html,<script>console.log(123)</script> source_id=server1.conn13.child1/39 
"
`;

exports[`sources-tree addToTree uses debuggeeUrl as default 1`] = `
" - root path= 
  - localhost:4242 path=localhost:4242 
    - components path=localhost:4242/components 
      - Header.js path=localhost:4242/components/Header.js source_id=undefined 
      - TodoItem.js path=localhost:4242/components/TodoItem.js source_id=undefined 
      - TodoTextInput.js path=localhost:4242/components/TodoTextInput.js source_id=undefined 
    - reducers path=localhost:4242/reducers 
      - index.js path=localhost:4242/reducers/index.js source_id=undefined 
    - index.js path=localhost:4242/index.js source_id=undefined 
  - resource://gre path=resource://gre 
    - modules path=resource://gre/modules 
      - ExtensionContent.jsm path=resource://gre/modules/ExtensionContent.jsm source_id=undefined 
  - voz37vlg5.codesandbox.io path=voz37vlg5.codesandbox.io 
    - static path=voz37vlg5.codesandbox.io/static 
      - js path=voz37vlg5.codesandbox.io/static/js 
        - components path=voz37vlg5.codesandbox.io/static/js/components 
          - TodoItem.js path=voz37vlg5.codesandbox.io/static/js/components/TodoItem.js source_id=undefined 
"
`;
